--- a/less/main.less
+++ b/less/main.less
@@ -6,18 +6,18 @@ header{
 }
 
 .title-container {
-    //background-image: url("assets\home.png");
+    background-image: url(\assets\home.png);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: @padding;
     border-bottom: 2px, solid, black;
-}
-    .btn {
-        .button( teal, 10%, 5%, center, center);
-    }
 
+    .btn {
+        .button( white, 10%, 5%, center, center);
+    }
+}
 
 .artists-container{
     width:100%;
