--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,7 @@ body {
 }
 h1 {
   font-size: 5rem;
+  color: whitesmoke;
 }
 div {
   font-size: 1.8rem;
@@ -122,6 +123,7 @@ header {
   padding: 2%;
 }
 .title-container {
+  background-image: url(\assets\home.png);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -129,8 +131,8 @@ header {
   padding: 2%;
   border-bottom: 2px, solid, black;
 }
-.btn {
-  background-color: teal;
+.title-container .btn {
+  background-color: white;
   border-radius: 10%;
   padding: 5%;
   display: flex;
